[project]
name = "roga-i-kopita"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "geoalchemy2>=0.18.0",
    "pre-commit>=4.4.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "ruff>=0.14.5",
    "uvicorn>=0.38.0",
]
